// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkDisplay /> Matches the current snapshot 1`] = `
<styled.div
  id="link-display"
  linkFromTilePos={null}
>
  <styled.svg>
    <styled.line
      x1="5%"
      x2="5%"
      y1="5%"
      y2="5%"
    />
  </styled.svg>
</styled.div>
`;

exports[`<LinkDisplay /> Matches the current snapshot when linking from a tile 1`] = `
<styled.div
  id="link-display"
  linkFromTilePos={2}
>
  <styled.svg>
    <styled.line
      x1="25%"
      x2="35%"
      y1="5%"
      y2="5%"
    />
  </styled.svg>
</styled.div>
`;
